# advancing-front-triangulation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  todo.txt
afront/: CMakeLists.txt
afront/src/afront/: advancing_front.cpp  advancing_front.h  edge.cpp  edge.h  mesh_builder.h  node.cpp  node.h  surface_memory.cpp  surface_memory.h  volume.h  volume_data.h  volume_util.cpp  volume_util.h
core/: CMakeLists.txt
core/src/core/debug/: assertion.cpp  assertion.h  log.cpp  log.h
core/src/core/math/: aabb.h  math_util.h  matrix4.cpp  matrix4.h  quat.cpp  quat.h  quat_util.h  transform.h  vec3.h
core/src/core/spatial/: aabb_spatial_hash.h  point_spatial_hash.h  spatial_hash.cpp  spatial_hash.h
core/src/core/util/: algo.h  conversion.h  file_util.cpp  file_util.h  hash_util.h  mx3.h  rgba.h  timer.h
game-client/: CMakeLists.txt
game-client/data/shader/: line_vs.glsl  world_fs.glsl  world_vs.glsl
game-client/src/client/: entity.h  example_models.h  main.cpp  materials.h
game-client/src/client/render/: light_view.h  mesh_builders.h  mesh_sortable.h  mesh_view.h  render_setting.h  render_util.h  vbo.h  vertex_buffer.h
game-client/src/client/render/shader/: game_shader_settings.cpp  game_shader_settings.h  game_shaders.cpp  game_shaders.h  shader_map.cpp  shader_map.h  shader_program.cpp  shader_program.h  shader_setting.cpp  shader_setting.h
game-client/src/client/util/: keyboard_control.cpp  keyboard_control.h  keyboard_input.h  relative_camera.h  ticker.h
game-client/src/client/util/noise/: noise.h  tables.h
game-client/src/client/volume/: csg.h  difference.h  fbm.h  game_volume_data.h  select.h  union.h  volumes.h
unittest/: CMakeLists.txt
unittest/src/: main.cpp
unittest/src/afront/: advancing_front_no_change_test.cpp  advancing_front_test.cpp  edge_test.cpp  mesh_inspector.h  node_test.cpp  surface_memory_test.cpp  test_models.h  volume_util_test.cpp
unittest/src/client/util/: mesh_sortable_test.cpp
unittest/src/core/math/: math_util_test.cpp  matrix4_test.cpp  quat_test.cpp  transform_new_test.cpp
unittest/src/core/spatial/: aabb_spatial_hash_test.cpp  spatial_hash_test.cpp
unittest/src/core/util/: hash_util_test.cpp  rgba_test.cpp
xgl/: CMakeLists.txt
xgl/src/xgl/: xgl.cpp  xgl.h
